--- a/unimp/build.gradle
+++ b/unimp/build.gradle
@@ -29,7 +29,7 @@ android {
 
 dependencies {
 
-    api fileTree(include: ['*.jar'], dir: 'libs')
+    api fileTree(include: ['*.aar'], dir: 'libs')
 
     api 'androidx.appcompat:appcompat:1.3.0'
     api 'com.google.android.material:material:1.4.0'
