--- a/unimp/build.gradle
+++ b/unimp/build.gradle
@@ -15,6 +15,12 @@ android {
         consumerProguardFiles "consumer-rules.pro"
     }
 
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['libs']
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -29,11 +35,14 @@ android {
 
 dependencies {
 
-    api fileTree(include: ['*.aar'], dir: 'libs')
 
-    api 'androidx.appcompat:appcompat:1.3.0'
-    api 'com.google.android.material:material:1.4.0'
+    api(name:'uniapp-v8-release.aar', ext:'aar')
+    api(name:'uniMPSDK-V2-release', ext:'aar')
+    api(name:'android-gif-drawable-release@1.2.23', ext:'aar')
+    api(name:'base_oaid_sdk', ext:'aar')
 
+    compileOnly 'androidx.appcompat:appcompat:1.3.0'
+    compileOnly 'com.google.android.material:material:1.4.0'
     compileOnly 'com.android.support:recyclerview-v7:28.0.0'
     compileOnly 'com.android.support:support-v4:28.0.0'
     compileOnly 'com.android.support:appcompat-v7:28.0.0'
