--- a/unimp/build.gradle
+++ b/unimp/build.gradle
@@ -4,6 +4,19 @@ plugins {
 apply plugin: 'com.github.dcendents.android-maven'
 group='com.github.shili'
 
+
+//rootProject.allprojects {
+//    repositories {
+//        google()
+//        mavenCentral()
+//        flatDir {
+//            dirs project(':unimp').file('libs')
+//        }
+//    }
+//}
+
+
+
 android {
     compileSdkVersion 32
 
@@ -36,10 +49,11 @@ android {
 dependencies {
 
 
-    api(name:'uniapp-v8-release.aar', ext:'aar')
-    api(name:'uniMPSDK-V2-release', ext:'aar')
-    api(name:'android-gif-drawable-release@1.2.23', ext:'aar')
-    api(name:'base_oaid_sdk', ext:'aar')
+//    api(name:'uniapp-v8-release.aar', ext:'aar')
+//    api(name:'uniMPSDK-V2-release', ext:'aar')
+//    api(name:'android-gif-drawable-release@1.2.23', ext:'aar')
+//    api(name:'base_oaid_sdk', ext:'aar')
+    api fileTree(include: ['*.aar'], dir: 'libs')
 
     compileOnly 'androidx.appcompat:appcompat:1.3.0'
     compileOnly 'com.google.android.material:material:1.4.0'
