--- a/unimp/build.gradle
+++ b/unimp/build.gradle
@@ -2,20 +2,16 @@ plugins {
     id 'com.android.library'
 }
 apply plugin: 'com.github.dcendents.android-maven'
-group='com.github.shili'
-
-
-//rootProject.allprojects {
-//    repositories {
-//        google()
-//        mavenCentral()
-//        flatDir {
-//            dirs project(':unimp').file('libs')
-//        }
-//    }
-//}
-
-
+group = 'com.github.shili'
+rootProject.allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        flatDir {
+            dirs project(':unimp').file('libs')
+        }
+    }
+}
 
 android {
     compileSdkVersion 32
@@ -26,12 +22,6 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
-    }
-
-    sourceSets {
-        main {
-            jniLibs.srcDirs = ['libs']
-        }
     }
 
     buildTypes {
@@ -47,19 +37,15 @@ android {
 }
 
 dependencies {
+    api(name: 'uniapp-v8-release', ext: 'aar')
+    api(name: 'uniMPSDK-V2-release', ext: 'aar')
+    api(name: 'android-gif-drawable-release@1.2.23', ext: 'aar')
+    api(name: 'base_oaid_sdk', ext: 'aar')
 
-
-//    api(name:'uniapp-v8-release.aar', ext:'aar')
-//    api(name:'uniMPSDK-V2-release', ext:'aar')
-//    api(name:'android-gif-drawable-release@1.2.23', ext:'aar')
-//    api(name:'base_oaid_sdk', ext:'aar')
-    api fileTree(include: ['*.aar'], dir: 'libs')
-
-    compileOnly 'androidx.appcompat:appcompat:1.3.0'
-    compileOnly 'com.google.android.material:material:1.4.0'
-    compileOnly 'com.android.support:recyclerview-v7:28.0.0'
-    compileOnly 'com.android.support:support-v4:28.0.0'
-    compileOnly 'com.android.support:appcompat-v7:28.0.0'
-    compileOnly 'com.alibaba:fastjson:1.2.66'
-
+    implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.alibaba:fastjson:1.2.66'
 }
