--- a/unimp/build.gradle
+++ b/unimp/build.gradle
@@ -36,10 +36,7 @@ android {
 }
 
 dependencies {
-    api(name: 'uniapp-v8-release', ext: 'aar')
-    api(name: 'uniMPSDK-V2-release', ext: 'aar')
-    api(name: 'android-gif-drawable-release@1.2.23', ext: 'aar')
-    api(name: 'base_oaid_sdk', ext: 'aar')
+    api fileTree(dir: 'libs', include: ['*.jar','*.aar'])
 
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.4.0'
